--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,11 @@ path = "src/tuto/control_flow/main.rs"
 [[bin]]
 name = "ownership"
 path = "src/tuto/ownership/main.rs"
+[[bin]]
+name = "structures"
+path = "src/tuto/structures/main.rs"
+[[bin]]
+name = "enumerations"
+path = "src/tuto/enumerations/main.rs"
 
 [dependencies]
